@@ -236,7 +236,7 @@ namespace libtorrent
 		SET(send_buffer_low_watermark, 512, 0),
 		SET(send_buffer_watermark, 500 * 1024, 0),
 		SET(send_buffer_watermark_factor, 50, 0),
-		SET(choking_algorithm, settings_pack::fixed_slots_choker, &session_impl::update_choking_algorithm),
+		SET(choking_algorithm, settings_pack::fixed_slots_choker, 0),
 		SET(seed_choking_algorithm, settings_pack::round_robin, 0),
 		SET(cache_size, 1024, 0),
 		SET(cache_buffer_chunk_size, 0, &session_impl::update_cache_buffer_chunk_size),
@@ -292,7 +292,7 @@ namespace libtorrent
 		DEPRECATED_SET(local_upload_rate_limit, 0, &session_impl::update_local_upload_rate),
 		DEPRECATED_SET(local_download_rate_limit, 0, &session_impl::update_local_download_rate),
 		SET(dht_upload_rate_limit, 4000, &session_impl::update_dht_upload_rate_limit),
-		SET(unchoke_slots_limit, 8, &session_impl::update_choking_algorithm),
+		SET(unchoke_slots_limit, 8, &session_impl::update_unchoke_limit),
 		DEPRECATED_SET(half_open_limit, 0, 0),
 		SET(connections_limit, 200, &session_impl::update_connections_limit),
 		SET(connections_slack, 10, 0),
